[gd_scene load_steps=12 format=2]

[ext_resource path="res://Graphics/Characters/sonic_sprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/Sonic.gd" type="Script" id=2]
[ext_resource path="res://Graphics/blind_effect.png" type="Texture" id=3]
[ext_resource path="res://Graphics/arrow_button.png" type="Texture" id=4]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Graphics/pause_button.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "down"
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 13, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 11, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "right"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1, 3 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 18, 16 ]
}

[node name="Sonic" type="KinematicBody2D"]
position = Vector2( 514.774, 305.47 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 8
frame = 13

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HouseDialog" type="ConfirmationDialog" parent="CanvasLayer"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -37.5
margin_right = 63.0
margin_bottom = 37.5
window_title = "Question"
dialog_text = "Do you want to enter this house"
dialog_autowrap = true

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blind_effect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="left_down" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TouchScreenButton" parent="CanvasLayer/left_down"]
position = Vector2( 248, -32 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
action = "ui_right"
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="CanvasLayer/left_down"]
position = Vector2( 48, -128 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
action = "ui_left"
visibility_mode = 1

[node name="right_up" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="TouchScreenButton" parent="CanvasLayer/right_up"]
pause_mode = 2
position = Vector2( -120, 25 )
normal = ExtResource( 6 )
action = "ui_cancel"
visibility_mode = 1

[node name="right_down" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down" type="TouchScreenButton" parent="CanvasLayer/right_down"]
position = Vector2( -135, 25 )
rotation = -1.5708
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
action = "ui_down"
visibility_mode = 1

[node name="up" type="TouchScreenButton" parent="CanvasLayer/right_down"]
position = Vector2( -40, -175 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
action = "ui_up"
visibility_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )
[connection signal="confirmed" from="CanvasLayer/HouseDialog" to="." method="_on_HouseDialog_confirmed"]
[connection signal="popup_hide" from="CanvasLayer/HouseDialog" to="." method="_on_HouseDialog_popup_hide"]
